--- a/ads-front/index.html
+++ b/ads-front/index.html
@@ -7,7 +7,7 @@
     <title>Tiktok</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="position: relative;"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
